--- a/MyPokedex/app/src/main/res/layout/activity_main.xml
+++ b/MyPokedex/app/src/main/res/layout/activity_main.xml
@@ -6,39 +6,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/pallet_off_white"
+    android:background="@drawable/pokemon_center_background"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="15dp">
+        android:background="#D32F2F"
+        android:paddingVertical="8dp"
+        android:elevation="8dp">
 
         <ImageView
             android:id="@+id/appIconImageView"
             android:layout_width="148dp"
             android:layout_height="52dp"
-            android:layout_marginHorizontal="20dp"
-
-            android:layout_marginStart="112dp"
-
             android:src="@drawable/img"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/addPokemonBtn"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:backgroundTint="@color/pallet_light_green"
+            android:backgroundTint="@android:color/white"
             android:src="@drawable/outline_add_circle_42x42"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="16dp"
+            app:tint="#F44336"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -46,9 +44,10 @@
         android:id="@+id/pokemonsGridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginVertical="10dp"
-        android:padding="10dp"
+        android:padding="8dp"
         android:numColumns="2"
-        />
+        android:horizontalSpacing="8dp"
+        android:verticalSpacing="8dp"
+        android:gravity="center" />
 
 </LinearLayout>
